# gearhead-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  gearhead.py  pyproject.toml
gearhead_tui/: __init__.py  agent_api.py  app.py  engine.py  screens.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py  smoke_app.py  smoke_engine.py
